[gd_scene load_steps=67 format=3 uid="uid://dqteejbbu5np6"]

[ext_resource type="Texture2D" uid="uid://chb521n4a782t" path="res://Image/Menu/BackgroundConnexion.png" id="1_4fg70"]
[ext_resource type="PackedScene" uid="uid://bwawk0k02t6bj" path="res://Scene/Menu/ConnexionScreen.tscn" id="2_wwdge"]
[ext_resource type="PackedScene" uid="uid://dtmrnkvmyv2ix" path="res://Scene/Menu/RegisterScreen.tscn" id="3_ipevt"]
[ext_resource type="Script" path="res://Script/Menu/ButtonPlayAnimated.gd" id="4_maark"]
[ext_resource type="Texture2D" uid="uid://dp2a5nfvm27sq" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_000.png" id="5_3gh87"]
[ext_resource type="Texture2D" uid="uid://d0kkdh8g8wabb" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_001.png" id="6_lka1x"]
[ext_resource type="Texture2D" uid="uid://boq6kmoyrphfk" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_002.png" id="7_7hsnk"]
[ext_resource type="Texture2D" uid="uid://51iy8t2w1xb4" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_003.png" id="8_68mdp"]
[ext_resource type="Texture2D" uid="uid://c0se25rv4gkfl" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_004.png" id="9_26cc0"]
[ext_resource type="Texture2D" uid="uid://kjdwfvur43y6" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_005.png" id="10_51wxc"]
[ext_resource type="Texture2D" uid="uid://dw3www2wriw0q" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_006.png" id="11_xkbr0"]
[ext_resource type="Texture2D" uid="uid://c6qyhqts3yfh8" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_007.png" id="12_a3egi"]
[ext_resource type="Texture2D" uid="uid://do72m4ho2weui" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_008.png" id="13_tjuxk"]
[ext_resource type="Texture2D" uid="uid://xs6a35w5khcr" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_009.png" id="14_7c5fu"]
[ext_resource type="Texture2D" uid="uid://dpx6q0kn2brql" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_010.png" id="15_dpfku"]
[ext_resource type="Texture2D" uid="uid://dlxeow83d2vts" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_011.png" id="16_av2ii"]
[ext_resource type="Texture2D" uid="uid://bw4py6eutmpgw" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_012.png" id="17_q4uev"]
[ext_resource type="Texture2D" uid="uid://bpgb374wl7s6n" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_013.png" id="18_u6e15"]
[ext_resource type="Texture2D" uid="uid://q44ulq1chuo8" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_014.png" id="19_eudri"]
[ext_resource type="Texture2D" uid="uid://32lgsx06xllw" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_015.png" id="20_3u6in"]
[ext_resource type="Texture2D" uid="uid://cws1cwbqsqj12" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_016.png" id="21_30f8l"]
[ext_resource type="Texture2D" uid="uid://c7scg7y4u076d" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_017.png" id="22_1hbo8"]
[ext_resource type="Texture2D" uid="uid://bdxh87da1o0vj" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_018.png" id="23_6kkqo"]
[ext_resource type="Texture2D" uid="uid://bewji1vtt55gl" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_019.png" id="24_2n8rc"]
[ext_resource type="Texture2D" uid="uid://bfnxo7ym7eyu" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_020.png" id="25_r2ysm"]
[ext_resource type="Texture2D" uid="uid://bng5icjnh1372" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_021.png" id="26_s1qe6"]
[ext_resource type="Texture2D" uid="uid://c03eq3d11jpo" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_022.png" id="27_spkit"]
[ext_resource type="Texture2D" uid="uid://c6dyumyqe3xwr" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_023.png" id="28_e4jsy"]
[ext_resource type="Texture2D" uid="uid://dpt5g8ysofb2f" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_024.png" id="29_n4bw6"]
[ext_resource type="Texture2D" uid="uid://dy363vcpdcld5" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_025.png" id="30_fbchs"]
[ext_resource type="Texture2D" uid="uid://6j130trx2fym" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_026.png" id="31_8r3nq"]
[ext_resource type="Texture2D" uid="uid://bwebuu51y48fw" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_027.png" id="32_txvft"]
[ext_resource type="Texture2D" uid="uid://b1gjw2cx81u04" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_028.png" id="33_rn2fo"]
[ext_resource type="Texture2D" uid="uid://bh2h0t3l8guqu" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_029.png" id="34_g72r1"]
[ext_resource type="Texture2D" uid="uid://dlotdwcah5p70" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_030.png" id="35_q5hjs"]
[ext_resource type="Texture2D" uid="uid://byy81w83fnmwb" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_031.png" id="36_pmr5e"]
[ext_resource type="Texture2D" uid="uid://cc306jxl2v8gy" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_032.png" id="37_hwykp"]
[ext_resource type="Texture2D" uid="uid://btxg5pad0yfpl" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_033.png" id="38_girdc"]
[ext_resource type="Texture2D" uid="uid://clahqvnj6k0el" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_034.png" id="39_kkt0o"]
[ext_resource type="Texture2D" uid="uid://dddmk15472jru" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_035.png" id="40_wxx7o"]
[ext_resource type="Texture2D" uid="uid://c4i58q5rbhlyv" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_036.png" id="41_naqsb"]
[ext_resource type="Texture2D" uid="uid://cw7y02sljfs8k" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_037.png" id="42_i8svr"]
[ext_resource type="Texture2D" uid="uid://dcdvs7b15dqjp" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_038.png" id="43_fdve8"]
[ext_resource type="Texture2D" uid="uid://bgbbovwsi12o6" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_039.png" id="44_esrgf"]
[ext_resource type="Texture2D" uid="uid://qrtumjmexwkc" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_040.png" id="45_afutd"]
[ext_resource type="Texture2D" uid="uid://hl3hbom7vc4y" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_041.png" id="46_x81f1"]
[ext_resource type="Texture2D" uid="uid://bbhil6eyvhjp6" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_042.png" id="47_73p7g"]
[ext_resource type="Texture2D" uid="uid://dd2trrfrxfnas" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_043.png" id="48_o2o35"]
[ext_resource type="Texture2D" uid="uid://kk7cfoul6spt" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_044.png" id="49_f01bt"]
[ext_resource type="Texture2D" uid="uid://cyrg5kg1h5ao0" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_045.png" id="50_skvf3"]
[ext_resource type="Texture2D" uid="uid://cdr0w8aw0pc2v" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_046.png" id="51_nc7ro"]
[ext_resource type="Texture2D" uid="uid://dxgc0aehkywg7" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_047.png" id="52_6d4nk"]
[ext_resource type="Texture2D" uid="uid://cqo4jj58v7ja2" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_048.png" id="53_ykpeh"]
[ext_resource type="Texture2D" uid="uid://bl3xfutlyrox8" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_049.png" id="54_kc43c"]
[ext_resource type="Texture2D" uid="uid://ctvyg5xkqvrg5" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_050.png" id="55_hi5tk"]
[ext_resource type="Texture2D" uid="uid://bijeswrpaqc16" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_051.png" id="56_q7sh1"]
[ext_resource type="Texture2D" uid="uid://dugal73gkjst0" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_052.png" id="57_0w4dl"]
[ext_resource type="Texture2D" uid="uid://bl8f7f6i5yy4s" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_053.png" id="58_fgd1x"]
[ext_resource type="Texture2D" uid="uid://biiulqjofhian" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_054.png" id="59_1lvsr"]
[ext_resource type="Texture2D" uid="uid://bx2735fusaku3" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_055.png" id="60_qbpy4"]
[ext_resource type="Texture2D" uid="uid://bjuxhw6r4mjwn" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_056.png" id="61_jcqqw"]
[ext_resource type="Texture2D" uid="uid://b4y5lfvpcpuo3" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_057.png" id="62_50x7d"]
[ext_resource type="Texture2D" uid="uid://cxqnt3ki558oq" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_058.png" id="63_cfni6"]
[ext_resource type="Texture2D" uid="uid://bpd0edw4qk66f" path="res://Image/Animation/Menu/HoverPlay/HoverPlay_059.png" id="64_5o17n"]
[ext_resource type="FontFile" uid="uid://dq1fkh6cln463" path="res://Font/Forgotten.ttf" id="184_1dxph"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yc5hj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_3gh87")
}, {
"duration": 1.0,
"texture": ExtResource("6_lka1x")
}, {
"duration": 1.0,
"texture": ExtResource("7_7hsnk")
}, {
"duration": 1.0,
"texture": ExtResource("8_68mdp")
}, {
"duration": 1.0,
"texture": ExtResource("9_26cc0")
}, {
"duration": 1.0,
"texture": ExtResource("10_51wxc")
}, {
"duration": 1.0,
"texture": ExtResource("11_xkbr0")
}, {
"duration": 1.0,
"texture": ExtResource("12_a3egi")
}, {
"duration": 1.0,
"texture": ExtResource("13_tjuxk")
}, {
"duration": 1.0,
"texture": ExtResource("14_7c5fu")
}, {
"duration": 1.0,
"texture": ExtResource("15_dpfku")
}, {
"duration": 1.0,
"texture": ExtResource("16_av2ii")
}, {
"duration": 1.0,
"texture": ExtResource("17_q4uev")
}, {
"duration": 1.0,
"texture": ExtResource("18_u6e15")
}, {
"duration": 1.0,
"texture": ExtResource("19_eudri")
}, {
"duration": 1.0,
"texture": ExtResource("20_3u6in")
}, {
"duration": 1.0,
"texture": ExtResource("21_30f8l")
}, {
"duration": 1.0,
"texture": ExtResource("22_1hbo8")
}, {
"duration": 1.0,
"texture": ExtResource("23_6kkqo")
}, {
"duration": 1.0,
"texture": ExtResource("24_2n8rc")
}, {
"duration": 1.0,
"texture": ExtResource("25_r2ysm")
}, {
"duration": 1.0,
"texture": ExtResource("26_s1qe6")
}, {
"duration": 1.0,
"texture": ExtResource("27_spkit")
}, {
"duration": 1.0,
"texture": ExtResource("28_e4jsy")
}, {
"duration": 1.0,
"texture": ExtResource("29_n4bw6")
}, {
"duration": 1.0,
"texture": ExtResource("30_fbchs")
}, {
"duration": 1.0,
"texture": ExtResource("31_8r3nq")
}, {
"duration": 1.0,
"texture": ExtResource("32_txvft")
}, {
"duration": 1.0,
"texture": ExtResource("33_rn2fo")
}, {
"duration": 1.0,
"texture": ExtResource("34_g72r1")
}, {
"duration": 1.0,
"texture": ExtResource("35_q5hjs")
}, {
"duration": 1.0,
"texture": ExtResource("36_pmr5e")
}, {
"duration": 1.0,
"texture": ExtResource("37_hwykp")
}, {
"duration": 1.0,
"texture": ExtResource("38_girdc")
}, {
"duration": 1.0,
"texture": ExtResource("39_kkt0o")
}, {
"duration": 1.0,
"texture": ExtResource("40_wxx7o")
}, {
"duration": 1.0,
"texture": ExtResource("41_naqsb")
}, {
"duration": 1.0,
"texture": ExtResource("42_i8svr")
}, {
"duration": 1.0,
"texture": ExtResource("43_fdve8")
}, {
"duration": 1.0,
"texture": ExtResource("44_esrgf")
}, {
"duration": 1.0,
"texture": ExtResource("45_afutd")
}, {
"duration": 1.0,
"texture": ExtResource("46_x81f1")
}, {
"duration": 1.0,
"texture": ExtResource("47_73p7g")
}, {
"duration": 1.0,
"texture": ExtResource("48_o2o35")
}, {
"duration": 1.0,
"texture": ExtResource("49_f01bt")
}, {
"duration": 1.0,
"texture": ExtResource("50_skvf3")
}, {
"duration": 1.0,
"texture": ExtResource("51_nc7ro")
}, {
"duration": 1.0,
"texture": ExtResource("52_6d4nk")
}, {
"duration": 1.0,
"texture": ExtResource("53_ykpeh")
}, {
"duration": 1.0,
"texture": ExtResource("54_kc43c")
}, {
"duration": 1.0,
"texture": ExtResource("55_hi5tk")
}, {
"duration": 1.0,
"texture": ExtResource("56_q7sh1")
}, {
"duration": 1.0,
"texture": ExtResource("57_0w4dl")
}, {
"duration": 1.0,
"texture": ExtResource("58_fgd1x")
}, {
"duration": 1.0,
"texture": ExtResource("59_1lvsr")
}, {
"duration": 1.0,
"texture": ExtResource("60_qbpy4")
}, {
"duration": 1.0,
"texture": ExtResource("61_jcqqw")
}, {
"duration": 1.0,
"texture": ExtResource("62_50x7d")
}, {
"duration": 1.0,
"texture": ExtResource("63_cfni6")
}, {
"duration": 1.0,
"texture": ExtResource("64_5o17n")
}],
"loop": true,
"name": &"default",
"speed": 30.0
}]

[node name="Main" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_4fg70")
centered = false

[node name="ConnexionScreen" parent="Background" instance=ExtResource("2_wwdge")]

[node name="RegisterScreen" parent="Background" instance=ExtResource("3_ipevt")]
visible = false

[node name="ButtonPlayAnimated" type="Control" parent="Background"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 594.0
offset_top = 621.0
offset_right = 1350.0
offset_bottom = 973.0
script = ExtResource("4_maark")

[node name="AnimatedHoverPlay" type="AnimatedSprite2D" parent="Background/ButtonPlayAnimated"]
position = Vector2(256, 63)
sprite_frames = SubResource("SpriteFrames_yc5hj")
centered = false

[node name="PlayText" type="Label" parent="Background/ButtonPlayAnimated"]
layout_mode = 0
offset_left = 248.0
offset_top = 121.0
offset_right = 495.0
offset_bottom = 237.0
theme_override_fonts/font = ExtResource("184_1dxph")
theme_override_font_sizes/font_size = 110
text = "Jouer"

[node name="ButtonPlay" type="Button" parent="Background/ButtonPlayAnimated"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 196.0
offset_top = 115.0
offset_right = 565.0
offset_bottom = 240.0
mouse_default_cursor_shape = 2

[connection signal="button_down" from="Background/ButtonPlayAnimated/ButtonPlay" to="Background/ButtonPlayAnimated" method="_on_button_play_button_down"]
[connection signal="mouse_entered" from="Background/ButtonPlayAnimated/ButtonPlay" to="Background/ButtonPlayAnimated" method="_on_button_play_mouse_entered"]
[connection signal="mouse_exited" from="Background/ButtonPlayAnimated/ButtonPlay" to="Background/ButtonPlayAnimated" method="_on_button_play_mouse_exited"]
